--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,8 @@
-runtime: python27
-api_version: 1
+#runtime: python27
+#api_version: 1
 threadsafe: true
+runtime: nodejs
+env: flex
 
 handlers:
 - url: /static
