--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
     "twilio-video": "^2.2.0",
     "typescript": "^3.7.5"
   },
+  
+    "engines": {
+      "node": "13.11.0"
+    },
+ 
   "devDependencies": {
     "mocha": "^6.2.2",
     "react-test-renderer": "^16.12.0",
@@ -95,10 +100,13 @@
       "pre-commit": "lint-staged"
     }
   },
+ 
+  
   "proxy": "http://localhost:8081/",
   "jest": {
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
     ]
   }
+ 
 }
