--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # The following values must be populated for the local token server to dispense tokens.
-# See README.md for instructions on how to find these credentials in the Twilio Console.
+# See README.md for instructions on how to find these credentials in the Twilio Console. testing gcloud
 TWILIO_ACCOUNT_SID=AC00000000000000000000000000000000
 TWILIO_API_KEY_SID=SK00000000000000000000000000000000
 TWILIO_API_KEY_SECRET=00000000000000000000000000000000
