--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 TWILIO_ACCOUNT_SID=AC97981d8830cfa75737d12007373ce52f
 TWILIO_API_KEY_SID=SK8fead5269745204086b310031cbb9d47
 TWILIO_API_KEY_SECRET=7Chyo3NFfEd6aQMyUACgqNYaayJDWBdT
+NODE_PATH=./src
