--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/twilio-video": "^2.0.10",
+    "awesome-typescript-loader": "^5.2.1",
     "concurrently": "^5.1.0",
     "express": "^4.17.1",
     "firebase": "^7.8.0",
@@ -27,6 +28,7 @@
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1",
+    "source-map-loader": "^0.2.4",
     "twilio": "^3.39.3",
     "twilio-video": "^2.2.0",
     "typescript": "^3.7.5"
@@ -53,7 +55,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/react-hooks": "^3.2.1",
     "@types/enzyme": "^3.10.4",
-    "@types/enzyme-adapter-react-16": "^1.0.5"
+    "@types/enzyme-adapter-react-16": "^1.0.5",
+    "@testing-library/user-event": "^7.2.1",
+    "firebase": "^7.12.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-scripts": "3.4.1"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
