--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "twilio-video-app-react",
+  "name": "interactive-cares",
   "version": "0.1.0",
   "private": true,
   "license": "Apache-2.0",
